# RAG-chatBot

./: .gitignore  Makefile  README.md  langchain.ipynb  pyproject.toml  test.ipynb  test.py  test_image.py
data_processing/: DB.py  Test.ipynb  __init__.py  agentic_chunker.py  chunkers.py  chunking_agent.py
docs/: mkdocs.yml
docs/docs/: index.md
models/: clean_context.py
notebooks/: Test.ipynb  nootbook.ipynb
query/: __init__.py  queryRe-writting.py  queryRe_writting.py
rag_chatbot/: chat.py  environment.yml  frontend.py
rag_project_prototype/: notes.ipynb  rag_model.ipynb
